force-app/main/default/objects/Opportunity/fields/Concatenated_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Shipping_Address__c</fullName>
    <formula>Shipping_Address_NEW__r.Shipping_FirstName__c &amp;&quot; &quot;&amp;Shipping_Address_NEW__r.Shipping_LastName__c&amp;BR()&amp;
Shipping_Address_NEW__r.Shipping_Address_Line_1__c&amp;BR()&amp;
Shipping_Address_NEW__r.Shipping_Address_Line_2__c&amp;BR()&amp;
Shipping_Address_NEW__r.Shipping_City__c &amp;&quot;, &quot;&amp;
TEXT( Shipping_Address_NEW__r.Shipping_State__c )&amp;&quot; &quot;&amp;
Shipping_Address_NEW__r.Shipping_Zip_Code__c&amp;BR()&amp;
TEXT(Shipping_Address_NEW__r.Shipping_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenated Shipping Address</label>
    <type>Text</type>
</CustomField>