force-app/main/default/objects/Opportunity/fields/Configuration_Segment__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Segment__c</fullName>
    <label>Configuration Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Non Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>