force-app/main/default/objects/Opportunity/fields/Consolidated_Renewal_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Renewal_Opportunity_Id__c</fullName>
    <description>Id for source Consolidated Renewal Opportunity Id</description>
    <label>Consolidated Renewal Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>