force-app/main/default/objects/Opportunity/fields/Contract_Amount_Agreed_To__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount_Agreed_To__c</fullName>
    <label>Contract Amount Agreed To</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>