force-app/main/default/objects/Opportunity/fields/Contract_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_Link__c</fullName>
    <formula>CASESAFEID(IF(ISBLANK(SBQQ__AmendedContract__c), ContractId, SBQQ__AmendedContract__c))</formula>
    <label>Cloud Dashboard Contract ID Link</label>
    <type>Text</type>
</CustomField>