force-app/main/default/objects/Opportunity/fields/Corresponding_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Netsuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>Corresponding Netsuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>