force-app/main/default/objects/Opportunity/fields/CPQ_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Opportunity__c</fullName>
    <formula>NOT(ISBLANK(SBQQ__PrimaryQuote__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPQ Opportunity</label>
    <type>Checkbox</type>
</CustomField>