force-app/main/default/objects/Opportunity/fields/Credit_Analyst_Kickback_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Kickback_Note__c</fullName>
    <label>Order Management Closing Delay Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>