force-app/main/default/objects/Opportunity/fields/CS_POC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_POC_First_Name__c</fullName>
    <label>CS POC First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>