force-app/main/default/objects/Opportunity/fields/CST_count_HW_VG54_NA__c.field-meta.xml
<CustomField>
    <fullName>CST_count_HW_VG54_NA__c</fullName>
    <label>CST count: HW-VG54-NA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>