force-app/main/default/objects/Opportunity/fields/CST_count_HW_VG54_NA_NAH_unknown__c.field-meta.xml
<CustomField>
    <fullName>CST_count_HW_VG54_NA_NAH_unknown__c</fullName>
    <inlineHelpText>Please use VG54-NA for Passenger/Light Duty vehicles and VG54-NAH for Heavy and Medium Duty vehicles qualified</inlineHelpText>
    <label>CST count HW-VG54-NA/NAH unknown</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>