force-app/main/default/objects/Opportunity/fields/Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Exchange_Rate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>