force-app/main/default/objects/Opportunity/fields/Cust_Partner_Shipping_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Cust_Partner_Shipping_Account_Number__c</fullName>
    <description>Customer / Partner shipping account number, leave blank to ship on Samsara&apos;s account</description>
    <inlineHelpText>Customer / Partner shipping account number, leave blank to ship on Samsara&apos;s account</inlineHelpText>
    <label>Cust/Partner Shipping Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>