force-app/main/default/objects/Opportunity/fields/Custom_Billing__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing__c</fullName>
    <description>Select the Custom Credit Application value to apply a rebate in a non-standard manner or if the rebate value exceeds the value of the first invoice of the order</description>
    <inlineHelpText>Select the Custom Credit Application value to apply a rebate in a non-standard manner or if the rebate value exceeds the value of the first invoice of the order</inlineHelpText>
    <label>Custom Billing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Credit Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>