force-app/main/default/objects/Opportunity/fields/Custom_Billing_Schedule_Details__c.field-meta.xml
<CustomField>
    <fullName>Custom_Billing_Schedule_Details__c</fullName>
    <description>Enter the details for the billing schedule details if this deal requires Custom Credit Application and/or Custom Billing Schedules.</description>
    <inlineHelpText>Enter the details for the billing schedule details if this deal requires Custom Credit Application and/or Custom Billing Schedules.</inlineHelpText>
    <label>Custom Billing Schedule Details</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>