force-app/main/default/objects/Opportunity/fields/Custom_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Custom_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this box if this deal requires customized billing, such as mixed payment types or pro-rated billing.</description>
    <inlineHelpText>Select this box if this deal requires customized billing, such as mixed payment types or pro-rated billing.</inlineHelpText>
    <label>Custom Billing Schedule</label>
    <type>Checkbox</type>
</CustomField>