force-app/main/default/objects/Opportunity/fields/CVS_Review__c.field-meta.xml
<CustomField>
    <fullName>CVS_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-16030 : Changed Label form &quot;CVS Review&quot; to &quot;Order Management Review&quot;</description>
    <label>Order Management Review</label>
    <type>Checkbox</type>
</CustomField>