force-app/main/default/objects/Opportunity/fields/DCA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DCA_Enabled__c</fullName>
    <label>DCA Enabled</label>
    <length>30</length>
    <type>Text</type>
</CustomField>