force-app/main/default/objects/Opportunity/fields/Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to filter FT pending device deactivation from Samsara Cloud and AT&amp;T data</description>
    <inlineHelpText>Checkbox to filter FT pending device deactivation from Samsara Cloud and AT&amp;T data</inlineHelpText>
    <label>Deactivate?</label>
    <type>Checkbox</type>
</CustomField>