force-app/main/default/objects/Opportunity/fields/Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Date__c</fullName>
    <label>Deactivation Date</label>
    <type>DateTime</type>
</CustomField>