force-app/main/default/objects/Opportunity/fields/Deal_Components__c.field-meta.xml
<CustomField>
    <fullName>Deal_Components__c</fullName>
    <label>Deal Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor Buyout</fullName>
            </value>
            <value>
                <fullName>Installation Costs</fullName>
            </value>
            <value>
                <fullName>Future Free Months</fullName>
            </value>
            <value>
                <fullName>One Time Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>