force-app/main/default/objects/Opportunity/fields/Direct_Annual__c.field-meta.xml
<CustomField>
    <fullName>Direct_Annual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates internal financing annual payments, only applicable to Samsara Standard</inlineHelpText>
    <label>Direct Annual</label>
    <type>Checkbox</type>
</CustomField>