force-app/main/default/objects/Opportunity/fields/Direct_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Direct_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates internal financing monthly payments, only applicable to Samsara Standard</inlineHelpText>
    <label>Direct Monthly</label>
    <type>Checkbox</type>
</CustomField>