force-app/main/default/objects/Opportunity/fields/Direct_Monthly_Annual_through_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Direct_Monthly_Annual_through_Checkout__c</fullName>
    <description>Satisfies criteria node Direct Monthly/Annual through Checkout Link on Opportunity Consolidate process builder</description>
    <formula>AND( 
 Payment_Method__c &lt;&gt; &quot;directDebit&quot;, 
 OR( 
  Direct_Monthly__c = TRUE, 
  Direct_Annual__c = TRUE 
 ), 
 ISPICKVAL(Shipping_Country__c, &quot;United States&quot;) 
)</formula>
    <label>Direct Monthly/Annual through Checkout?</label>
    <type>Checkbox</type>
</CustomField>