force-app/main/default/objects/Opportunity/fields/Direct_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Direct_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not launched to sales org yet. Can be used on an exception basis and only visible to sales ops and finance for now.</description>
    <label>Direct Quarterly</label>
    <type>Checkbox</type>
</CustomField>