force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>A text box for reps to type in why they are looking for a discount approval</description>
    <label>Reason for Discount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>