force-app/main/default/objects/Opportunity/fields/Discount_Approval_Status_from_Quote__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Status_from_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked = &quot;Pending&quot; Discount Approval on the Primary Quote.</inlineHelpText>
    <label>Discount Approval Status from Quote</label>
    <type>Checkbox</type>
</CustomField>