force-app/main/default/objects/Opportunity/fields/Equipment_Bookings_ACV__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Bookings_ACV__c</fullName>
    <label>Equipment Bookings ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>