force-app/main/default/objects/Opportunity/fields/Exclude_from_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://samsaradev.atlassian.net/browse/GTMS-14495</description>
    <label>Exclude from Forecast</label>
    <type>Checkbox</type>
</CustomField>