force-app/main/default/objects/Opportunity/fields/Exclude_from_Xactly__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Xactly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark opportunities that will be excluded from Xactly Connect&apos;s SFDC pull. These opportunities will not be earned any commission.</description>
    <inlineHelpText>Used to mark opportunities that will be excluded from Xactly Connect&apos;s SFDC pull. These opportunities will not be earned any commission.</inlineHelpText>
    <label>Exclude from Xactly</label>
    <type>Checkbox</type>
</CustomField>