force-app/main/default/objects/Opportunity/fields/Express_Agreement_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Express_Agreement_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is no longer being used, use Checkout Agreement Accepted Date instead</description>
    <inlineHelpText>This field is no longer being used, use Checkout Agreement Accepted Date instead</inlineHelpText>
    <label>[Deprecate] Express Agreement Accepted</label>
    <type>Checkbox</type>
</CustomField>