force-app/main/default/objects/Opportunity/fields/Express_Agreement_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Express_Agreement_Accepted_Date__c</fullName>
    <label>Check out agreement accepted date</label>
    <type>Date</type>
</CustomField>