force-app/main/default/objects/Opportunity/fields/Express_Discount_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Express_Discount_Expiration_Date__c</fullName>
    <description>The date an Opportunities discount expires</description>
    <label>Express Discount Expiration Date</label>
    <type>Date</type>
</CustomField>