force-app/main/default/objects/Opportunity/fields/Express_Selected_Discount__c.field-meta.xml
<CustomField>
    <fullName>Express_Selected_Discount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Discount manually selected by reps on express deals (non-automatic, such as the one that gets stamped for annual payments).</description>
    <label>Express Selected Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>