force-app/main/default/objects/Opportunity/fields/Express_Upfront_Discount__c.field-meta.xml
<CustomField>
    <fullName>Express_Upfront_Discount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Upfront Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>