force-app/main/default/objects/Opportunity/fields/Finance_Approved_Amount_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved_Amount_Stamp__c</fullName>
    <description>Stamped by process builder at 90%.</description>
    <label>Finance Approved Amount Stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>