force-app/main/default/objects/Opportunity/fields/Finance_Kickback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finance_Kickback_Reason__c</fullName>
    <description>GTMS-16802: Added new picklist values and updated existing picklist values as per the excel in jira comments</description>
    <label>Closing Delay Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Form/ PO not attached to SFDC</fullName>
            </value>
            <value>
                <fullName>Order Form not signed</fullName>
                <label>Incomplete signature on Order Form</label>
            </value>
            <value>
                <fullName>Missing 1st payment</fullName>
            </value>
            <value>
                <fullName>Incorrect 1st payment</fullName>
                <label>Incorrect Amount Received</label>
            </value>
            <value>
                <fullName>Difference in license total on Order Form/ SFDC</fullName>
            </value>
            <value>
                <fullName>Difference in products on Order Form/SFDC</fullName>
            </value>
            <value>
                <fullName>Tax discrepancy</fullName>
            </value>
            <value>
                <fullName>Tax listed as $99K in error</fullName>
            </value>
            <value>
                <fullName>S&amp;H listed as $99k in error</fullName>
            </value>
            <value>
                <fullName>S&amp;H listed on 100% discounted items - Promo</fullName>
            </value>
            <value>
                <fullName>Increase in license term due to change in close date</fullName>
            </value>
            <value>
                <fullName>Decrease in license term due to change in close date</fullName>
            </value>
            <value>
                <fullName>Mismatch payment type on Order Form/SFDC</fullName>
            </value>
            <value>
                <fullName>Mismatch currency on Order Form/ SFDC</fullName>
            </value>
            <value>
                <fullName>Missing subsidy</fullName>
            </value>
            <value>
                <fullName>Incorrect Buyout Amount in SFDC</fullName>
            </value>
            <value>
                <fullName>Renewal date has passed</fullName>
            </value>
            <value>
                <fullName>NCS/ Rebate does not match SER value</fullName>
            </value>
            <value>
                <fullName>Invalid VAT</fullName>
            </value>
            <value>
                <fullName>Primary Quote Not Approved</fullName>
            </value>
            <value>
                <fullName>Technical SFDC Issue</fullName>
            </value>
            <value>
                <fullName>Order received after shipping cutoff</fullName>
            </value>
            <value>
                <fullName>Close Date is not equal to current date</fullName>
            </value>
            <value>
                <fullName>Currency Mismatch across Opportunity, CPQ, and Docusign</fullName>
            </value>
            <value>
                <fullName>VAT Discrepancy</fullName>
            </value>
            <value>
                <fullName>No Payment Method on File</fullName>
            </value>
            <value>
                <fullName>S&amp;H not matching Docusign</fullName>
            </value>
            <value>
                <fullName>Billing Company Name does not match between the DocuSign and the CPQ quote</fullName>
            </value>
            <value>
                <fullName>The customer is enrolled in automated billing (New Billing Process)</fullName>
            </value>
            <value>
                <fullName>The billing frequency on the DocuSign do not match the payments on the CPQ quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>