force-app/main/default/objects/Opportunity/fields/Finance_Kickback_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Finance_Kickback_Resolution__c</fullName>
    <description>GTMS-16802: Added new picklist values and updated existing picklist values as per the excel in jira comments</description>
    <label>Closing Delay Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attach Signed Order Form/ PO to SFDC</fullName>
            </value>
            <value>
                <fullName>Please acquire Customer Signature</fullName>
            </value>
            <value>
                <fullName>Customer must complete checkout link</fullName>
            </value>
            <value>
                <fullName>Need customer authorization to process balance due</fullName>
            </value>
            <value>
                <fullName>Align license total in SFDC with Order Form</fullName>
            </value>
            <value>
                <fullName>Align products in SFDC with Order Form</fullName>
            </value>
            <value>
                <fullName>Email Tax Team</fullName>
            </value>
            <value>
                <fullName>Email Sales Ops</fullName>
            </value>
            <value>
                <fullName>Email Order Ops</fullName>
            </value>
            <value>
                <fullName>Email Order Ops to update S&amp;H</fullName>
            </value>
            <value>
                <fullName>Need new order form or move to closing on original close date</fullName>
            </value>
            <value>
                <fullName>Need new order form</fullName>
            </value>
            <value>
                <fullName>Align payment type on Order Form/SFDC</fullName>
            </value>
            <value>
                <fullName>Align currency on Order Form/SFDC</fullName>
            </value>
            <value>
                <fullName>Email Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Attach Subsidy/ Short Pay Letter</fullName>
            </value>
            <value>
                <fullName>Update Subsidy Field to match PO</fullName>
            </value>
            <value>
                <fullName>1st payment due in advance</fullName>
            </value>
            <value>
                <fullName>Align SER rebate /ncs revenue opp to SER value</fullName>
            </value>
            <value>
                <fullName>Confirm VAT Number</fullName>
            </value>
            <value>
                <fullName>Update SFDC with the correct close date</fullName>
            </value>
            <value>
                <fullName>Approve primary quote</fullName>
            </value>
            <value>
                <fullName>See Note Below</fullName>
            </value>
            <value>
                <fullName>Provide payment method</fullName>
            </value>
            <value>
                <fullName>Email Deal Desk</fullName>
            </value>
            <value>
                <fullName>Email Internal Finance</fullName>
            </value>
            <value>
                <fullName>Remove Buyout Amount from SFDC</fullName>
            </value>
            <value>
                <fullName>Please have customer confirm updated Tax Amount</fullName>
            </value>
            <value>
                <fullName>Please update close date to today</fullName>
            </value>
            <value>
                <fullName>Align currency on Opportunity, CPQ and Docusign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>