force-app/main/default/objects/Opportunity/fields/Finance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Finance Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Finance Partner)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>