force-app/main/default/objects/Opportunity/fields/Finance_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyout Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Finance Partner Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>