force-app/main/default/objects/Opportunity/fields/Finance_Segment_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Finance_Segment_Stamp__c</fullName>
    <description>Used as the source of truth for Finance Segment after 4/12/2019.</description>
    <label>Finance Segment Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>