force-app/main/default/objects/Opportunity/fields/First_Invoice_Total__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Total__c</fullName>
    <label>First Invoice Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>