force-app/main/default/objects/Opportunity/fields/First_Purchase__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase__c</fullName>
    <formula>Account.First_Purchase_Date__c = CloseDate || ISBLANK(Account.First_Purchase_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Purchase</label>
    <type>Checkbox</type>
</CustomField>