force-app/main/default/objects/Opportunity/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <description>Stamps the fiscal quarter.</description>
    <formula>IF(AND(CloseDate &gt; DATE(2018,1,31), CloseDate &lt;= DATE(2018,4,30)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2018,4,30), CloseDate &lt;= DATE(2018,7,31)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2018,7,31), CloseDate &lt;= DATE(2018,10,31)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2018,10,31), CloseDate &lt;= DATE(2019,2,1)),&quot;4&quot;,
IF(AND(CloseDate &gt; DATE(2019,2,1), CloseDate &lt;= DATE(2019,5,4)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2019,5,4), CloseDate &lt;= DATE(2019,8,3)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2019,8,3), CloseDate &lt;= DATE(2019,11,2)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2019,11,2), CloseDate &lt;= DATE(2020,2,1)),&quot;4&quot;,
IF(AND(CloseDate &gt; DATE(2020,2,1), CloseDate &lt;= DATE(2020,5,2)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2020,5,2), CloseDate &lt;= DATE(2020,8,1)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2020,8,2), CloseDate &lt;= DATE(2020,10,31)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2020,10,31), CloseDate &lt;= DATE(2021,1,30)),&quot;4&quot;,
IF(AND(CloseDate &gt; DATE(2021,1,30), CloseDate &lt;= DATE(2021,5,1)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2021,5,1), CloseDate &lt;= DATE(2021,7,31)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2021,7,31), CloseDate &lt;= DATE(2021,10,30)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2021,10,30), CloseDate &lt;= DATE(2022,1,29)),&quot;4&quot;,

/*UPDATED BELOW FOR https://samsaradev.atlassian.net/browse/GTMS-11210*/
IF(AND(CloseDate &gt; DATE(2022,1,30), CloseDate &lt;= DATE(2022,4,30)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2022,5,1), CloseDate &lt;= DATE(2022,7,30)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2022,7,31), CloseDate &lt;= DATE(2022,10,29)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2022,10,30), CloseDate &lt;= DATE(2023,1,28)),&quot;4&quot;,
IF(AND(CloseDate &gt; DATE(2023,1,29), CloseDate &lt;= DATE(2023,4,29)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2023,4,30), CloseDate &lt;= DATE(2023,7,29)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2023,7,30), CloseDate &lt;= DATE(2023,10,28)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2023,10,29), CloseDate &lt;= DATE(2024,2,3)),&quot;4&quot;,
IF(AND(CloseDate &gt; DATE(2024,2,4), CloseDate &lt;= DATE(2024,5,4)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2024,5,5), CloseDate &lt;= DATE(2024,8,3)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2024,8,4), CloseDate &lt;= DATE(2024,11,2)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2024,11,3), CloseDate &lt;= DATE(2025,2,1)),&quot;4&quot;,

/*UPDATED BELOW FOR https://samsaradev.atlassian.net/browse/GTMS-27250 */
IF(AND(CloseDate &gt; DATE(2025,2,1), CloseDate &lt;= DATE(2025,5,3)),&quot;1&quot;,
IF(AND(CloseDate &gt; DATE(2025,5,3), CloseDate &lt;= DATE(2025,8,2)),&quot;2&quot;,
IF(AND(CloseDate &gt; DATE(2025,8,2), CloseDate &lt;= DATE(2025,11,1)),&quot;3&quot;,
IF(AND(CloseDate &gt; DATE(2025,11,1), CloseDate &lt;= DATE(2026,1,31)),&quot;4&quot;,
(CASE(MONTH(CloseDate),2,&quot;1&quot;,3,&quot;1&quot;,4,&quot;1&quot;,5,&quot;2&quot;,6,&quot;2&quot;,7,&quot;2&quot;,8,&quot;3&quot;,9,&quot;3&quot;,10,&quot;3&quot;,11,&quot;4&quot;,12,&quot;4&quot;,1,&quot;4&quot;,&quot;None&quot;))))))))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stamps the fiscal quarter.</inlineHelpText>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>