force-app/main/default/objects/Opportunity/fields/Flex_Has_Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Flex_Has_Non_Standard_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Non Standard Terms identifies whether an opportunity contains non-standard terms based on specific criteria. It is set to TRUE if any predefined conditions are met, otherwise, it defaults to FALSE.</description>
    <label>Has Non Standard Terms</label>
    <type>Checkbox</type>
</CustomField>