force-app/main/default/objects/Opportunity/fields/Forms_ACV__c.field-meta.xml
<CustomField>
    <fullName>Forms_ACV__c</fullName>
    <label>Forms ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>