force-app/main/default/objects/Opportunity/fields/FP_and_Upsell_ACV__c.field-meta.xml
<CustomField>
    <fullName>FP_and_Upsell_ACV__c</fullName>
    <label>First Purchase and Upsell ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>